@@ -1,3 +1,7 @@
+05 September 2007
+
+* Don't purge if no mails have been dropped.
+
 03 September 2007
 
 * Options to fetch only new or old mail from POP3 or IMAP accounts. Based on
@@ -638,4 +642,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.158 2007-09-03 17:08:00 nicm Exp $
+$Id: CHANGES,v 1.159 2007-09-05 08:45:49 nicm Exp $
